netflix/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netflix-ingress
spec:
  ingressClassName: azure-application-gateway

  rules:
  - host: netflix.anujthakur.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: netflix
            port:
              number: 80
